current weather after logging in

--- a/src/main/resources/templates/registrationPage.html
+++ b/src/main/resources/templates/registrationPage.html
@@ -16,8 +16,11 @@
     <label for="lname">Last Name</label>
     <input class="form-control" th:field="*{lastName}" id="lname">
     <br>
-    <label for="username">username</label>
+    <label for="username">Username</label>
     <input class="form-control" th:field="*{username}" id="username">
+    <br>
+    <label for="city">City</label>
+    <input class="form-control" th:field="*{city}" id="city">
     <br>
     <label for="email">E-mail</label>
     <input class="form-control" th:field="*{email}" id="email">
