--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -18,37 +18,38 @@
         <a href="/">Home Page</a>
         <a href="/farms">Farms</a>
         <a href="/products">Produkty</a>
-        <a th:if="!${@userContextService.userName()}" href="/registration">Rejestracja</a>
+        <a th:if="!${@userContextService.userName()}" href="/registration">Register</a>
         <p th:text="${@userContextService.userName()}"></p>
     </div>
-<!--    <span th:if="${@userContextService.userName()}">-->
-<!--<div style="float: right" id="openweathermap-widget">-->
-<!--    <link href="//openweathermap.org/themes/openweathermap/assets/vendor/owm/css/openweathermap-widget-right.min.css"-->
-<!--          rel="stylesheet">-->
-<!--    <div class="widget-right widget-right&#45;&#45;type4 widget-right&#45;&#45;brown">-->
-<!--        <div class="widget-right__layout widget-right__layout&#45;&#45;brown">-->
-<!--            <div class="widget-right-card">-->
-<!--                <div class="widget-right__title"></div>-->
-<!--                <div class="widget-right__description"></div>-->
-<!--            </div>-->
-<!--            <img id="weather-image" src=""-->
-<!--                 width="100"-->
-<!--                 class="weather-right__icon weather-right__icon&#45;&#45;type4 weather-right__icon&#45;&#45;brown">-->
-<!--            <table class="weather-right-card">-->
-<!--                <tbody>-->
-<!--                <tr class="weather-right-card__items">-->
-<!--                    <td class="weather-right-card__item weather-right-card__temperature-min">-->
-<!--                        min<span>°C</span></td>-->
-<!--                    <td class="weather-right-card__item weather-right-card__temperature-max">-->
-<!--                        max<span>°C</span></td>-->
-<!--                </tr>-->
-<!--                </tbody>-->
-<!--            </table>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-<!--<p style="float: right;color: white" id="weather"></p>-->
-<!--</span>-->
+    <span th:if="${@userContextService.userName()}">
+<div style="float: right" id="openweathermap-widget">
+    <link href="//openweathermap.org/themes/openweathermap/assets/vendor/owm/css/openweathermap-widget-right.min.css"
+          rel="stylesheet">
+    <div class="widget-right widget-right--type5 widget-right--brown">
+        <div class="widget-right__layout widget-right__layout--brown">
+            <div class="widget-right-card">
+                <div class="widget-right__title"></div>
+                <div class="widget-right__description"></div>
+            </div>
+            <img id="weather-image" src=""
+                 width="35"
+                 class="weather-right__icon weather-right__icon--type5 weather-right__icon--brown">
+            <table class="weather-right-card">
+                <tbody>
+                <tr class="weather-right-card__items">
+                    <td class="weather-right-card__item weather-right-card__temperature-min">
+                        min<span>°C</span></td>
+                    <td class="weather-right-card__item weather-right-card__temperature-max">
+                        max<span>°C</span></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
+<p style="float: right;color: white" id="weather"></p>
+</span>
 </div>
 
 </body>
