--- a/src/main/resources/templates/farmEditPage.html
+++ b/src/main/resources/templates/farmEditPage.html
@@ -6,60 +6,95 @@
     <div th:replace="fragments/header :: header-css"/>
 </head>
 <body>
-<div th:replace="/fragments/header :: headerFragment">
+<div>
+    <div th:replace="/fragments/header :: headerFragment">
+    </div>
+    <div>Spiders</div>
+    <table border="1">
+        <tr>
+            <th>ID</th>
+            <th>Status</th>
+            <th>Name</th>
+            <th>Genus</th>
+            <th>Species</th>
+            <th>Acquisition Date</th>
+            <th>Sex</th>
+            <th>Temperament</th>
+            <th>Venom potency</th>
+            <th>Type</th>
+            <th>Last fed</th>
+            <th>Last substrate change</th>
+            <th>Last rehouse</th>
+            <th>Details</th>
+            <th th:if="${isAdmin}">Delete spider</th>
+            <th>Actions</th>
+        </tr>
+        <tr th:each="s: ${spiderList}">
+            <td th:text="${s.id}">ID</td>
+            <td th:text="${s.status}">Status</td>
+            <td th:text="${s.name}">Name</td>
+            <td th:text="${s.infoDTO.genus}">Genus</td>
+            <td th:text="${s.infoDTO.species}">Species</td>
+            <td th:text="${s.acquisitionDate}">Acquisition Date</td>
+            <td th:text="${s.sex}">Sex</td>
+            <td th:text="${s.temperament}">Temperament</td>
+            <td th:text="${s.venomPotency}">Venom potency</td>
+            <td th:text="${s.type}">Type</td>
+            <td th:text="${recentFeeding.get(s)}">Last fed</td>
+            <td th:text="${recentSubstrateChange.get(s)}">Last substrate change</td>
+            <td th:text="${recentRehouse.get(s)}">Last rehouse</td>
+            <td>
+                <a th:href="'/farms/'+${farm.id}+'/spiders/'+${s.id}">Details</a>
+            </td>
+            <td th:if="${isAdmin}">
+                <form onSubmit="return confirm('Are you sure you wish to delete?');" th:object="${s}"
+                      th:action="@{'/farms/'+${farm.id}+'/deleteSpider/'}"
+                      method="post">
+                    <input type=hidden name="spiderID" th:value="${s.id}"/>
+                    <button class="btn btn-danger btn-block">Delete</button>
+                </form>
+            </td>
+            <td>
+                <form th:object="${farm}" th:action="@{'/farms/'+${farm.id}+'/spiders/'+${s.id} +'/care'}"
+                      method="post">
+                    <input type=hidden name="careType" value="FEEDING"/>
+                    <button class="btn btn-success btn-block">Feed</button>
+                </form>
+                <form th:object="${farm}" th:action="@{'/farms/'+${farm.id}+'/spiders/'+${s.id} +'/care'}"
+                      method="post">
+                    <input type=hidden name="careType" value="SUBSTRATE_CHANGE"/>
+                    <button class="btn btn-primary btn-block">New substrate</button>
+                </form>
+                <form th:object="${farm}" th:action="@{'/farms/'+${farm.id}+'/spiders/'+${s.id} +'/care'}"
+                      method="post">
+                    <input type=hidden name="careType" value="REHOUSE"/>
+                    <button class="btn btn-primary btn-block">Rehouse</button>
+                </form>
+            </td>
+        </tr>
+    </table>
+    <hr>
+    <div th:if="${isAdmin}">
+        <form th:action="@{/farms/{id}/addUser/(id=${farm.id})}" method="post">
+            <label>
+                <input name="username" placeholder="username" required>
+            </label><br>
+            <button class="btn btn-danger">Add User</button>
+        </form>
+
+        <form th:action="@{/farms/{id}/addAdmin/(id=${farm.id})}" method="post">
+            <label>
+                <input name="username" placeholder="username" required>
+            </label><br>
+            <button class="btn btn-danger">Add Admin</button>
+        </form>
+        <br>
+        <form th:action="@{/farms/{id}/addSpider/(id=${farm.id})}" method="post">
+            <button class="btn btn-primary">Add Spider</button>
+        </form>
+    </div>
+
+    <div th:replace="fragments/footer :: footer"></div>
 </div>
-<div>Spiders</div>
-<table border="1">
-    <tr>
-        <th>ID</th>
-        <th>Status</th>
-        <th>Name</th>
-        <th>Genus</th>
-        <th>Species</th>
-        <th>Acquisition Date</th>
-        <th>Sex</th>
-        <th>Temperament</th>
-        <th>Venom potency</th>
-        <th>Type</th>
-        <th>Last fed</th>
-        <th>Last substrate change</th>
-        <th>Last rehouse</th>
-        <th>Actions</th>
-    </tr>
-    <tr th:each="s: ${spiderList}">
-        <td th:text="${s.id}">ID</td>
-        <td th:text="${s.status}">Status</td>
-        <td th:text="${s.name}">Name</td>
-        <td th:text="${s.infoDTO.genus}">Genus</td>
-        <td th:text="${s.infoDTO.species}">Species</td>
-        <td th:text="${s.acquisitionDate}">Acquisition Date</td>
-        <td th:text="${s.sex}">Sex</td>
-        <td th:text="${s.temperament}">Temperament</td>
-        <td th:text="${s.venomPotency}">Venom potency</td>
-        <td th:text="${s.type}">Type</td>
-        <td th:text="${recentFeeding.get(s)}">Last fed</td>
-        <td th:text="${recentSubstrateChange.get(s)}">Last rehouse</td>
-        <td th:text="${recentRehouse.get(s)}">Last substrate change</td>
-        <td>
-            <form th:object="${farm}" th:action="@{'/farms/'+${farm.id}+'/spiders/'+${s.id} +'/care'}" method="post">
-                <input type=hidden name="careType" value="FEEDING"/>
-                <button class="btn btn-danger btn-block">Feed</button>
-            </form>
-            <form th:object="${farm}" th:action="@{'/farms/'+${farm.id}+'/spiders/'+${s.id} +'/care'}" method="post">
-                <input type=hidden name="careType" value="SUBSTRATE_CHANGE"/>
-                <button class="btn btn-primary btn-block">New substrate</button>
-            </form>
-            <form th:object="${farm}" th:action="@{'/farms/'+${farm.id}+'/spiders/'+${s.id} +'/care'}" method="post">
-                <input type=hidden name="careType" value="REHOUSE"/>
-                <button class="btn btn-success btn-block">Rehouse</button>
-            </form>
-        </td>
-    </tr>
-</table>
-<hr>
-<form th:action="@{/farms/{id}/addSpider/(id=${farm.id})}" method="get">
-    <button class="btn btn-danger">Add Spider</button>
-</form>
-<div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
