--- a/src/main/resources/templates/farmsPage.html
+++ b/src/main/resources/templates/farmsPage.html
@@ -8,25 +8,44 @@
 <body>
 <div th:replace="/fragments/header :: headerFragment">
 </div>
-<form action="/farms">
-    <input type="text" name="searchText" th:value="${searchText}">
-    <button value="search">search</button>
-</form>
-<table border="1">
+<div>Farms with admin privileges</div>
+<table title="Farms with admin privileges" border="1">
+    <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Delete</th>
+        <th>Edit</th>
+    </tr>
+    <tr th:each="f : ${farmsWhereAdmin}">
+        <td th:text="${f.id}">ID</td>
+        <td th:text="${f.name}">Name</td>
+        <td>
+            <form onSubmit="return confirm('Are you sure you wish to delete?');" th:object="${f}" th:action="@{/farms/delete}" method="post">
+                <input type="hidden" name="id" th:value="${f.id}"/>
+                <button type="submit" class="btn btn-danger">Delete</button>
+            </form>
+        </td>
+        <td><a th:href="@{/farms/{id}(id=${f.id})}" class="btn btn-primary btn-block">Edit Farm</a></td>
+    </tr>
+</table>
+<div>Farms without admin privileges</div>
+<table title="Farms without admin privileges" border="1">
     <tr>
         <th>ID</th>
         <th>Name</th>
     </tr>
-    <tr th:each="f : ${farms}">
+    <tr th:each="f : ${farmsWhereUser}">
         <td th:text="${f.id}">ID</td>
         <td th:text="${f.name}">Name</td>
-        <td><a th:href="@{/farms/{id}(id=${f.id})}">Edit Farm</a></td>
+        <td><a th:href="@{/farms/{id}(id=${f.id})}" class="btn btn-primary btn-block">Edit Farm</a></td>
     </tr>
 </table>
 <div id="container"></div>
 <hr>
 <form action="/addFarm" method="post">
-    <input name="farmName" placeholder="Farm name"><br>
+    <label>
+        <input name="farmName" placeholder="Farm name" required>
+    </label><br>
     <button>Add farm</button>
 </form>
 <div th:replace="fragments/footer :: footer"></div>
