--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -15,7 +15,7 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/">Home Page</a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item active" th:if="${@userContextService.userName()}">
                 <a class="nav-link" href="/farms">Farms</a>
             </li>
         </ul>
