--- a/src/main/resources/templates/spiderEditPage.html
+++ b/src/main/resources/templates/spiderEditPage.html
@@ -22,110 +22,140 @@
 <body class="text-center">
 <div th:replace="/fragments/header :: headerFragment"></div>
 <br>
-<div style="width: 80%; margin: auto ">
-    <div class="row">
-        <div class="col">
-            <div class="container" style="width: 450px; text-align: left">
-                <div th:object="${spider}">
-                    <ul class="list-group">
-                        <li class="list-group-item list-group-item-primary" th:text="'Name: ' +${spider.name}"></li>
-                        <li class="list-group-item list-group-item-primary"
-                            th:text="'Species: ' +${spider.infoDTO.genus}+' '+${spider.infoDTO.species}"></li>
-                        <li class="list-group-item list-group-item-primary"
-                            th:text="'Common name: ' +${spider.infoDTO.getCommonName()}"></li>
-                        <li class="list-group-item list-group-item-primary" th:text="'Sex: ' +${spider.sex}"></li>
-                        <li class="list-group-item list-group-item-primary" th:text="'Status: ' +${spider.status}"></li>
-                        <li class="list-group-item list-group-item-primary"
-                            th:text="'Temperament: ' +${spider.temperament}"></li>
-                        <li class="list-group-item list-group-item-primary" th:text="'Type: ' +${spider.type}"></li>
-                        <li class="list-group-item list-group-item-primary"
-                            th:text="'Venom potency: ' +${spider.venomPotency}"></li>
-                        <li class="list-group-item list-group-item-primary"
-                            th:text="'Prefered temperature: ' +${spider.infoDTO.preferredTemperature}"></li>
-                        <li class="list-group-item list-group-item-primary"
-                            th:text="'Prefered humidity: ' +${spider.infoDTO.getPreferredHumidity()}"></li>
-                        <li class="list-group-item list-group-item-primary"
-                            th:text="'Urticating hair: ' +${spider.infoDTO.urticatingHairPresent}"></li>
-                        <li class="list-group-item list-group-item-primary"
-                            th:text="'Country of origin: ' +${spider.infoDTO.country}"></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
 
-        <div class="col">
-            <div class="head">
-                <div>Feeding</div>
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th>Date</th>
-                        <th>User</th>
-                    </tr>
-                    </thead>
-                </table>
-            </div>
-            <div class="body">
-                <table class="table">
-                    <tbody>
-                    <tr class="table-danger" th:each="f: ${feedingList}">
-                        <td th:text="${f.date}">User</td>
-                        <td th:text="${f.userDTO.username}">Date</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
+<div class="row" style="width: 80%; margin: auto">
+    <div class="col" th:object="${spider}">
+        <ul class="list-group">
+            <li class="list-group-item list-group-item-danger" th:text="'Name: ' +${spider.name}"></li>
+            <li class="list-group-item list-group-item-danger"
+                th:text="'Species: ' +${spider.infoDTO.genus}+' '+${spider.infoDTO.species}"></li>
+            <li class="list-group-item list-group-item-danger"
+                th:text="'Common name: ' +${spider.infoDTO.getCommonName()}"></li>
+            <li class="list-group-item list-group-item-danger" th:text="'Sex: ' +${spider.sex}"></li>
+        </ul>
+    </div>
+    <div class="col" th:object="${spider}">
+        <ul class="list-group">
+            <li class="list-group-item list-group-item-danger" th:text="'Status: ' +${spider.status}"></li>
+            <li class="list-group-item list-group-item-danger"
+                th:text="'Temperament: ' +${spider.temperament}"></li>
+            <li class="list-group-item list-group-item-danger" th:text="'Type: ' +${spider.type}"></li>
+            <li class="list-group-item list-group-item-danger"
+                th:text="'Venom potency: ' +${spider.venomPotency}"></li>
+        </ul>
+    </div>
+    <div class="col" th:object="${spider}">
+        <ul class="list-group">
+            <li class="list-group-item list-group-item-danger"
+                th:text="'Prefered temperature: ' +${spider.infoDTO.preferredTemperature}"></li>
+            <li class="list-group-item list-group-item-danger"
+                th:text="'Prefered humidity: ' +${spider.infoDTO.getPreferredHumidity()}"></li>
+            <li class="list-group-item list-group-item-danger"
+                th:text="'Urticating hair: ' +${spider.infoDTO.urticatingHairPresent}"></li>
+            <li class="list-group-item list-group-item-danger"
+                th:text="'Country of origin: ' +${spider.infoDTO.country}"></li>
+        </ul>
+    </div>
 
-        <div class="col">
-            <div class="head">
-                <div>Substrate change</div>
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th>Date</th>
-                        <th>User</th>
-                    </tr>
-                    </thead>
-                </table>
-            </div>
-            <div class="body">
-                <table class="table">
-                    <tbody>
-                    <tr class="table-warning" th:each="sc: ${substrateChangeList}">
-                        <td th:text="${sc.date}">User</td>
-                        <td th:text="${sc.userDTO.username}">Date</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
+</div>
+<br>
+<div class="row" style="width: 80%; margin: auto">
+    <div class="col">
+        <div class="head">
+            <div>Feeding</div>
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>User</th>
+                </tr>
+                </thead>
+            </table>
         </div>
+        <div class="body">
+            <table class="table">
+                <tbody>
+                <tr class="table-success" th:each="f: ${feedingList}">
+                    <td th:text="${f.date}">User</td>
+                    <td th:text="${f.userDTO.username}">Date</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 
-        <div class="col">
-            <div class="head">
-                <div>Rehouse</div>
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th>Date</th>
-                        <th>User</th>
-                    </tr>
-                    </thead>
-                </table>
-            </div>
-            <div class="body">
-                <table class="table">
-                    <tbody>
-                    <tr class="table-success" th:each="r: ${rehouseList}">
-                        <td th:text="${r.date}">User</td>
-                        <td th:text="${r.userDTO.username}">Date</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
+    <div class="col">
+        <div class="head">
+            <div>Substrate change</div>
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>User</th>
+                </tr>
+                </thead>
+            </table>
+        </div>
+        <div class="body">
+            <table class="table">
+                <tbody>
+                <tr class="table-primary" th:each="sc: ${substrateChangeList}">
+                    <td th:text="${sc.date}">User</td>
+                    <td th:text="${sc.userDTO.username}">Date</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <div class="col">
+        <div class="head">
+            <div>Rehouse</div>
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>User</th>
+                </tr>
+                </thead>
+            </table>
+        </div>
+        <div class="body">
+            <table class="table">
+                <tbody>
+                <tr class="table-primary" th:each="r: ${rehouseList}">
+                    <td th:text="${r.date}">User</td>
+                    <td th:text="${r.userDTO.username}">Date</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="col">
+        <div class="head">
+            <div>Molts</div>
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>No</th>
+                    <th>Date</th>
+                </tr>
+                </thead>
+            </table>
+        </div>
+        <div class="body">
+            <table class="table">
+                <tbody th:if="${moltsNumber}!=0">
+                <tr class="table-warning" th:each="i: ${#numbers.sequence(moltsNumber, 1)}">
+                    <td th:text="${i}">No</td>
+                    <td th:text="${spider.moltsDTOList[i -1].date}">Date</td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
+
 
 <div th:replace="fragments/footer :: footer"></div>
 </body>
